packages/taquito-michel-codec/test/contracts_015/ill_typed/never_literal.tz
parameter unit;
storage unit;
code {
       PUSH never {};
       FAILWITH
     }
